objects/Account.object
<CustomObject>
    <fields>
        <fullName>First_Oct_Demo_Account__c</fullName>
        <label>First Oct Demo Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Route 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Route_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Route 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Route_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Route 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test2__c</fullName>
        <label>Test2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Test</description>
        <label>Test</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>